F&GDEV/src/objects/Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Cost_to_Proceed__c</fullName>
        <label>Cost to Proceed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Version__c</fullName>
        <label>Estimate Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Per_Change_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revised Per Change Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproject__c</fullName>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subproject__c</columns>
        <columns>Estimate_Version__c</columns>
        <columns>Estimate__c</columns>
        <columns>Cost_to_Proceed__c</columns>
        <columns>Current__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Received_Date__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Est-{0000}</displayFormat>
        <label>Estimate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>